Docs(SSAFY) : Form cleanup

--- a/Interview/SSAFY/자소서.md
+++ b/Interview/SSAFY/자소서.md
@@ -27,39 +27,39 @@
 >## 1. 흥미를 끄는 키워드나 내용
 >
 >> ### 1. 질문 A : `"SW 개발의 역동성이 본인에게 어떤 의미인가요?"`
->> 끊임없는 동기부여와 성장의 원천입니다. <br>
-> 새로운 것을 배우고 활용하는 과정은 흥미롭고, <br>
-> 그 편리함과 퍼포먼스에 감탄하면서도 <br>
+>> 끊임없는 동기부여와 성장의 원천입니다.  
+> 새로운 것을 배우고 활용하는 과정은 흥미롭고,  
+> 그 편리함과 퍼포먼스에 감탄하면서도  
 > 언젠가 나도 저런걸 만들 수 있을까 기대됩니다.
 >> ### 1-1. 후속 1 `"최근에 도입해본 신기술이 있다면 무엇이고, 어떤 점이 인상 깊었나요?"`
->> 클라우드 기반 서버리스 아키텍처, AWS Lambda를 활용했습니다. <br>
-> 서버 부담 경감과 효율적 리소스 관리, 사용자의 편의성 증가가 인상 깊었고, <br>
+>> 클라우드 기반 서버리스 아키텍처, AWS Lambda를 활용했습니다.  
+> 서버 부담 경감과 효율적 리소스 관리, 사용자의 편의성 증가가 인상 깊었고,  
 > 클라우드 서비스의 통합과 집적화 추세를 실감할 수 있었습니다.
 >> ### 1-2. 후속 2 `"신기술을 도입하면서 어려웠던 점은 무엇이며, 어떻게 극복했나요?"`
->> 기존 기능의 변화나 확장은 상대적으로 쉬웠으나 <br>
-> 완전히 새로운 기술을 배워야 할 때는 참고 자료가 부족한 경우가 많았습니다.<br>
-> 그 해결법으로 다채롭고 실력있는 개발자가 많은 개발자 커뮤니티가 굉장히 요긴했습니다.<br> 
+>> 기존 기능의 변화나 확장은 상대적으로 쉬웠으나  
+> 완전히 새로운 기술을 배워야 할 때는 참고 자료가 부족한 경우가 많았습니다.  
+> 그 해결법으로 다채롭고 실력있는 개발자가 많은 개발자 커뮤니티가 굉장히 요긴했습니다.   
 > 이를 적극 활용하고, 때로는 마음 맞는 동료들과 스터디를 진행해 함께 극복했습니다."
 >> ### 2. 질문 B `"실용적인 프로젝트 경험 중 가장 기억에 남는 것은 무엇인가요?"`
->> 과제 채점기를 만들었던 경험이 가장 인상적이었습니다. <br>
-> 가장 필요한 서비스를 손수 개발하며 요구사항 분석부터 구현, 피드백까지 전 과정을 직접 진행하고, <br>
+>> 과제 채점기를 만들었던 경험이 가장 인상적이었습니다.  
+> 가장 필요한 서비스를 손수 개발하며 요구사항 분석부터 구현, 피드백까지 전 과정을 직접 진행하고,  
 > 그 편리함을 누리며 개발자로서의 성취감과 실용적 개발의 보람을 느꼈습니다."
 > 
-> ## 2. 설명이 부족하다고 느꼈던 부분<br>
+> ## 2. 설명이 부족하다고 느꼈던 부분  
 >> ### 2.1 질문 A `"프로그래밍 저지 서비스 개발에서 구체적으로 맡은 역할과 사용한 기술은 무엇인가요?"`
->> 채점 서버와 프로젝트 배포, 서버 구축과 프론트-백 연동을 담당했습니다. <br>
-> Node 서버를 Oracle Cloud로, React 클라이언트를 Vercel로 배포했으며 <br>
+>> 채점 서버와 프로젝트 배포, 서버 구축과 프론트-백 연동을 담당했습니다.  
+> Node 서버를 Oracle Cloud로, React 클라이언트를 Vercel로 배포했으며  
 > Node.js서버에서 동시성 문제를 해결하고, 리액트 구조와 유동적으로 조율해 연동했습니다. 
 >> ### 2.2 질문 B `"신기술 학습이 실제 프로젝트에 어떻게 기여했는지 구체적으로 설명해 주세요."`
->> 사실 최신 기술을 프로젝트에 적용해보진 못했습니다. <br>
-> 다만 전혀 배운 적 없던 React를 새롭게 익혀 프론트엔드에 적용해 <br>
+>> 사실 최신 기술을 프로젝트에 적용해보진 못했습니다.  
+> 다만 전혀 배운 적 없던 React를 새롭게 익혀 프론트엔드에 적용해  
 > 개발 편의성, 유지보수 용이성, 사용자 인터랙션을 모두 향상했습니다.
 > 
 > ## 3. 사실 확인이 필요한 부분
 >> ### 3.1 질문 A `"경진대회 은상 수상 경험이 있다고 했는데, 어떤 대회였고, 어떤 문제를 해결했나요?"`
->> 교내 자유 주제 프로그래밍 경진대회였습니다. <br>
-> 학생들의 프로그래밍 역량 강화를 위한 프로그래밍 저지 서포터 서비스를 제공해 <br>
-> 긍정적인 반응과 실제 10명 가량의 트래픽을 핸들링하고 피드백해 <br>
+>> 교내 자유 주제 프로그래밍 경진대회였습니다.  
+> 학생들의 프로그래밍 역량 강화를 위한 프로그래밍 저지 서포터 서비스를 제공해  
+> 긍정적인 반응과 실제 10명 가량의 트래픽을 핸들링하고 피드백해  
 > 퍼포먼스를 향상할 수 있었으며, 그 결과 은상과 인기상을 수상했습니다."
 <aside>
 
@@ -67,11 +67,11 @@
 </aside>
 
 > ### 1. 왜 내가 개발자가 되고 싶은지
->> 현실의 문제를 효율적으로 해결하고, 내가 만든 서비스가 <br>
+>> 현실의 문제를 효율적으로 해결하고, 내가 만든 서비스가  
 > 실제로 사람들의 삶을 편리하게 만드는 것이 개발자가 되고 싶은 가장 큰 이유입니다.
 > ### 2. 왜 내게 싸피가 필요한지
 >> 차세대 소프트웨어 분야에서 지속 가능성과 문제 해결 능력을 보유한   
-> 실력있고 경쟁력 있는 개발자가 되기 위한 최고의 선택이기 때문입니다.  <br><br>
+> 실력있고 경쟁력 있는 개발자가 되기 위한 최고의 선택이기 때문입니다.<br><br> 
 > 명확한 목표를 달성하기 위한 1년의 게이미피케이션 기반 자기주도적 학습,  
 > 세분화된 트랙, 최고의 교수진, 우수한 동료라는 SSAFY의 인프라는 매력적입니다.  
 > 기초와 신기술을 망라하는 교육, 체계적인 팀 프로젝트를 통해  
@@ -81,61 +81,61 @@
 > 
 # ⚠️ 인성 관련 질문
 > ### 1. 지원 동기는 무엇인지? 바로 취업을 준비해도 될 것 같은데 왜 싸피에 지원했는지?
->> 최소한의 기초 역량은 갖췄지만, 실무 경험과 협업 능력, 최신 기술 트렌드에 대한 <br>
-> 체계적인 학습이 더 필요하다고 느꼈습니다. <br>
+>> 최소한의 기초 역량은 갖췄지만, 실무 경험과 협업 능력, 최신 기술 트렌드에 대한  
+> 체계적인 학습이 더 필요하다고 느꼈습니다.  
 > SSAFY는 이를 체계적으로 경험할 수 있는 최적의 과정이라고 생각해 지원했습니다.
 > ### 2. 취업을 하기에 부족하다고 느끼는 이유는?
->> 실제 서비스 개발과 배포, 트래픽 핸들링과 트러블슈팅 경험, <br>
+>> 실제 서비스 개발과 배포, 트래픽 핸들링과 트러블슈팅 경험,  
 > 대규모 프로젝트 협업 경험이 부족하다고 느껴, 이를 보완하고자 SSAFY를 선택했습니다.
 > ### 3. 최종적으로 원하는 직무가 무엇인지?
->> 사실 최종을 논하기엔 역량이 많이 부족하다 생각합니다. <br>
-> 현재로썬 웹 백엔드 개발자 또는 풀스택 개발자로 성장해, <br>
+>> 사실 최종을 논하기엔 역량이 많이 부족하다 생각합니다.  
+> 현재로썬 웹 백엔드 개발자 또는 풀스택 개발자로 성장해,  
 > 사용자에게 실질적인 가치를 제공하는 서비스를 만들고 싶습니다.
 > ### 4. 협업 중 팀원 간에 갈등이 생긴 경험이 있는지? 있었다면 어떻게 해결했는지?
->> 저학년 때 프로젝트 진행 과정에서 일정 지연 문제로 갈등이 있었지만, <br>
-> 해당 팀원과 솔직하게 소통하며 서로의 입장을 이해할 수 있었습니다.<br>
+>> 저학년 때 프로젝트 진행 과정에서 일정 지연 문제로 갈등이 있었지만,  
+> 해당 팀원과 솔직하게 소통하며 서로의 입장을 이해할 수 있었습니다.  
 > 이후 역할을 재분배하고, 일정을 조정해 문제를 해결했습니다.
 > ### 5. 도전 정신이 드러났던 경험이 있는지? 그게 왜 도전적이라 생각하는지?
->> 졸업작품 개발 당시 멘토링, 교내활동, 조교, 정보처리기사 공부를 병행하면서도 <br>
-> 새로운 프로그래밍 언어와 프레임워크를 단기간에 익혀 프로젝트에 적용했습니다. <br>
-> 안정과 현상유지보단 나의 역량이 될 새로운 것을 배우고 익히며 몰입하고자 한 점, <br>
+>> 졸업작품 개발 당시 멘토링, 교내활동, 조교, 정보처리기사 공부를 병행하면서도  
+> 새로운 프로그래밍 언어와 프레임워크를 단기간에 익혀 프로젝트에 적용했습니다.  
+> 안정과 현상유지보단 나의 역량이 될 새로운 것을 배우고 익히며 몰입하고자 한 점,  
 > 노력하고 스스로를 몰아붙이며 성과를 냈던 점이 도전적이었다고 생각합니다.
 > ### 6. 리더로써 팀원간의 불화가 있을 때 어떻게 대처할 것인지?
->> 대부분의 갈등은 서로에 대한 몰이해에 기원한다 생각합니다.<br> 
-> 적극적 소통으로 원인을 파악하고, 각자의 입장을 경청한 뒤, 역지사지의 마음을 가질 수 있도록 설득하고 <br>
+>> 대부분의 갈등은 서로에 대한 몰이해에 기원한다 생각합니다.   
+> 적극적 소통으로 원인을 파악하고, 각자의 입장을 경청한 뒤, 역지사지의 마음을 가질 수 있도록 설득하고  
 > 보다 많은 인원이 납득 가능한 해결책을 함께 모색하겠습니다.
 > ### 7. 그럼에도 불구하고 갈등이 해결되지 않는다면?
->> 소통을 거부하거나 극단적 대립을 지속하는 등 함께하는 것이 모두에게 피해를 주는 경우도 있다고 생각합니다.<br>
+>> 소통을 거부하거나 극단적 대립을 지속하는 등 함께하는 것이 모두에게 피해를 주는 경우도 있다고 생각합니다.  
 > 리더라는 입장을 강압적으로 내세우기보단 구성원들의 의견을 경청하고 모두의 선택과 결정을 존중하겠습니다.
 > ### 8. 본인은 리더형인지, 팔로워형인지?
->> 상황에 따라 역할을 유연하게 바꿀 수 있고, 그 또한 역량의 하나라 생각합니다.<br>
-> 어쩌다 보니 팀장 역할을 주로 담당했지만, 그 경험을 바탕으로 때로는 리더로, <br>
+>> 상황에 따라 역할을 유연하게 바꿀 수 있고, 그 또한 역량의 하나라 생각합니다.  
+> 어쩌다 보니 팀장 역할을 주로 담당했지만, 그 경험을 바탕으로 때로는 리더로,  
 > 때로는 팀장을 응원하고 함께 협력하는 팔로워로도 잘 협업할 수 있다 자신합니다.
 > ### 9. 실패/좌절을 겪은 경험이 있는지?
->> 입대 전 소프트웨어 마에스트로 과정에 지원해 최종 면접에서 불합격한 경험이 있습니다. <br>
-> 최선을 다했다 자만했지만 실패후 준비 과정 분석과 회고를 진행하며 깨달은 부족한 부분을 보완해 <br>
+>> 입대 전 소프트웨어 마에스트로 과정에 지원해 최종 면접에서 불합격한 경험이 있습니다.  
+> 최선을 다했다 자만했지만 실패후 준비 과정 분석과 회고를 진행하며 깨달은 부족한 부분을 보완해  
 > 지금 SSAFY에 지원할 수 있었습니다.
 > ### 10. 팀을 위해 희생했던 경험이 있는지?
->> 졸업작품이 코로나 팬데믹 시절이었다 보니 팀원들이 코로나에 감염돼 격리되고 요양하곤 했습니다.<br>
-> 팀장 역할을 담당했다 보니 개인 시간을 할애해 해당 팀원의 역할을 대리하고, 이후 진행 내용을 공유해 <br>
+>> 졸업작품이 코로나 팬데믹 시절이었다 보니 팀원들이 코로나에 감염돼 격리되고 요양하곤 했습니다.  
+> 팀장 역할을 담당했다 보니 개인 시간을 할애해 해당 팀원의 역할을 대리하고, 이후 진행 내용을 공유해  
 > 담당 역할을 원활하게 이어갈 수 있도록 백업해 원활하게 프로젝트를 마무리했습니다.
 > ### 11. 본인의 장점에 대해
->> 다양한 경험과 문해력은 모든 것의 기초라 생각합니다.<br>
-> 꾸준한 학습과 독서, 소통과 대화, 설득과 설명 경험을 바탕으로 <br>
+>> 다양한 경험과 문해력은 모든 것의 기초라 생각합니다.  
+> 꾸준한 학습과 독서, 소통과 대화, 설득과 설명 경험을 바탕으로  
 > 새로운 기술을 빠르게 학습하고, 이를 공유하며 문제를 창의적으로 해결하는 능력이 제 강점입니다.
 > ### 12. 본인의 단점에 대해
->> 디테일에 집착하는 성향이 있어 때로는 세부적인 부분에 시간을 소모하기도 합니다.<br>
+>> 디테일에 집착하는 성향이 있어 때로는 세부적인 부분에 시간을 소모하기도 합니다.  
 > 제 단점을 자각하고 우선순위를 효율적으로 업무를 진행할 수 있도록 노력 중입니다.
 > ### 13. 졸업을 앞두고 있는데 취업을 위해 무엇을 했는지?
->> 기존 프로젝트 리팩토링과 취업 컨설팅/멘토링 프로젝트 분석, 기술 트렌트 탐색과 <br>
+>> 기존 프로젝트 리팩토링과 취업 컨설팅/멘토링 프로젝트 분석, 기술 트렌트 탐색과  
 > 주요 기업 코딩테스트/챌린지 경향 분석, 코딩 문제 풀이 등 다양한 활동을 하며 역량을 강화했습니다.
 > ### 14. 입과 후 포부는?
 >> SSAFY에서 배운 기술과 협업 경험을 바탕으로, 현업에서 바로 통하는 실력 있는 개발자가 되고 싶습니다.
 > ### 15. 다른 교육도 많은데 싸피를 선택한 이유는?
 >> 차세대 소프트웨어 분야에서 지속 가능성과 문제 해결 능력을 보유한   
-> 실력있고 경쟁력 있는 개발자가 되기 위한 최고의 선택이기 때문입니다.  <br><br>
+> 실력있고 경쟁력 있는 개발자가 되기 위한 최고의 선택이기 때문입니다.<br><br> 
 > 명확한 목표를 달성하기 위한 1년의 게이미피케이션 기반 자기주도적 학습,  
-> 세분화된 트랙, 최고의 교수진, 우수한 동료라는 SSAFY의 인프라는 매력적입니다.  <br><br>
+> 세분화된 트랙, 최고의 교수진, 우수한 동료라는 SSAFY의 인프라는 매력적입니다.<br><br> 
 > 기초와 신기술을 망라하는 교육, 체계적인 팀 프로젝트를 통해  
 > 실무 프로젝트와 AI를 비롯한 최신 기술 트렌드를 경험으로써  
 > 자신만의 포트폴리오를 만들고 스스로의 역량을 강화하며,  
